# This file is part of GNU Mailutils
# Copyright (C) 2000,2001,2002 Free Software Foundation
# See file COPYING in the distribution root directory for copying conditions.

EXTRA_DIST = \
 debug.m4 \
 enable.m4 \
 gssapi.m4 \
 guile.m4 \
 malloc.m4 \
 mu_libobj.m4 \
 realloc.m4 \
 regex.m4 \
 utmp.m4 \
 iconv.m4 \
 codeset.m4 \
 gettext.m4 \
 glibc21.m4 \
 intdiv0.m4 \
 inttypes-pri.m4 \
 inttypes.m4 \
 inttypes_h.m4 \
 isc-posix.m4 \
 lcmessage.m4 \
 lib-ld.m4 \
 lib-link.m4 \
 lib-prefix.m4 \
 progtest.m4 \
 stdint_h.m4 \
 uintmax_t.m4 \
 ulonglong.m4
