## Process this file with GNU Automake to create Makefile.in

##   Copyright (C) 2000, 2001, 2002 Free Software Foundation, Inc.
##
##   GNU Mailtuils is free software; you can redistribute it and/or
##   modify it under the terms of the GNU General Public License as
##   published by the Free Software Foundation; either version 2, or (at
##   your option) any later version.
##
##   This program is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
##   General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the Free Software
##   Foundation, Inc.
##   59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

EXTRA_DIST = \
 debug.m4 \
 enable.m4 \
 gssapi.m4 \
 guile.m4 \
 malloc.m4 \
 mu_libobj.m4 \
 realloc.m4 \
 regex.m4 \
 utmp.m4 \
 iconv.m4 \
 codeset.m4 \
 gettext.m4 \
 glibc21.m4 \
 intdiv0.m4 \
 inttypes-pri.m4 \
 inttypes.m4 \
 inttypes_h.m4 \
 isc-posix.m4 \
 lcmessage.m4 \
 lib-ld.m4 \
 lib-link.m4 \
 lib-prefix.m4 \
 progtest.m4 \
 stdint_h.m4 \
 uintmax_t.m4 \
 ulonglong.m4
